# agent-lens

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: ROADMAP.md  USAGE.md  jsonl-schema-observed.md
scripts/: fake_session.py
src/agentlens/: __init__.py  __main__.py  app.py  app.tcss  cli.py  flowchart_layout.py  graph_model.py  locator.py  omc_state.py  parser.py  subagent_watcher.py  watcher.py
src/agentlens/panels/: __init__.py  flowchart.py  session_path_input.py  session_picker.py  subagent_detail.py  timeline.py
src/harness_visual/: __init__.py  __main__.py  app.py  app.tcss  bus.py  cli.py  events.py  flowchart_layout.py  graph_model.py  locator.py  messages.py  omc_state.py  parser.py  subagent_locator.py  subagent_watcher.py  watcher.py
src/harness_visual/panels/: __init__.py  agent_tree.py  detail_modal.py  flowchart.py  session_picker.py  timeline.py
tests/: test_cli.py  test_cross_highlight.py  test_flowchart_layout.py  test_flowchart_panel.py  test_graph_model.py  test_idle_footer.py  test_instance_view.py  test_locator.py  test_nested_spawn.py  test_omc_state.py  test_parser.py  test_replay_real_slice.py  test_responsiveness.py  test_session_path_input.py  test_session_picker.py  test_session_switch.py  test_smoke.py  test_subagent_aggregation.py  test_subagent_detail_screen.py  test_subagent_locator.py  test_timeline.py  test_watcher.py
tests/fixtures/: real_session_slice.jsonl
