[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-visual"
version = "0.1.0"
description = "Live-tail TUI for Claude Code sessions + OMC team state"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "harness-visual" }]
dependencies = [
    "textual>=0.60",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
harness-visual = "harness_visual.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_visual"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
